--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
         <div id="report">
             <h3>Report</h3>
-            <p>Total UID: <span id="total-uid">0</span></p>
+            <p>♻️Total UID: <span id="total-uid">0</span></p>
+            <p>🤣 Double Paste : <span id="duplicate-count">0</span></p>
             <p>✅ OK UID: <span id="ok-uid">0</span></p>
             <p>🚫 Return UID: <span id="return-uid">0</span></p>
             <p>💵 Total Amount: <span id="amount">0</span> tk</p>
